--- a/localisation/english/sps_l_english.yml
+++ b/localisation/english/sps_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  tech_black_holes_stabilization:0 "Black Holes Stabilization"
  tech_black_holes_stabilization_desc:0 "Theory about White Holes connected with Black Holes is interesting, we should try to stabilize one from them."
- central_wormhole_base_desc:0 "What should we do with this?"
+ central_wormhole_base_DESC:0 "What should we do with this?"
  CENTRAL_WORMHOLE:0 "Black or White Hole"
  sps_amenities_20:0 "Additional Amenities"
  
@@ -11,10 +11,11 @@
  sps_precursor_category_desc:0 "These ruins looks like remains of ancient civilisation, we should check them"
  Yes:0 "Yes we wanna continue our research"
  Nah:0 "It's waste of the time"
- sps_precursors_basic.10_desc:0 "We found a some databanks, their owners call themselves as Vultuuan"
- sps_precursors_basic.11_desc:0 "THEY ARE MONSTERS, wait. How we should name them? Yuuhts?"
- sps_precursors_basic.12_desc:0 "First League, they was federation to help every intelligent life in the space. Now we'll find them"
- sps_precursors_basic.13_desc:0 "It looks like a ruined starport after heavy bombardment, we found destroyed ships and a sign 'Irrasians have been burnt'. Isn't that strange?"
- sps_precursors_basic.14_desc:0 "We found a robots remnants, a lot of them. On every unit is gravered one word 'Cybrex'"
- sps_precursors_basic.15_desc:0 "A life seeders, Baols and their mission should be fulfilled. Should we take this burdon into our shoulders?"
- sps_precursors_basic.16_desc:0 "This voice in my head, what is this? Zroni, zroni, zroni..."
+ sps_precursors_basic_desc_3:0 "Our team which has been send to a planet found strange ruins, they are calling for science ship assistance"
+ sps_precursors_basic_desc_10:0 "We found a some databanks, their owners call themselves as Vultuuan"
+ sps_precursors_basic_desc_11:0 "THEY ARE MONSTERS, wait. How we should name them? Yuuhts?"
+ sps_precursors_basic_desc_12:0 "First League, they was federation to help every intelligent life in the space. Now we'll find them"
+ sps_precursors_basic_desc_13:0 "It looks like a ruined starport after heavy bombardment, we found destroyed ships and a sign 'Irrasians have been burnt'. Isn't that strange?"
+ sps_precursors_basic_desc_14:0 "We found a robots remnants, a lot of them. On every unit is gravered one word 'Cybrex'"
+ sps_precursors_basic_desc_15:0 "A life seeders, Baols and their mission should be fulfilled. Should we take this burdon into our shoulders?"
+ sps_precursors_basic_desc_16:0 "This voice in my head, what is this? Zroni, zroni, zroni..."
